--- a/java2/3_spring/thymeleaf_demo/src/main/resources/templates/myCustomHtml.html
+++ b/java2/3_spring/thymeleaf_demo/src/main/resources/templates/myCustomHtml.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,6 +7,9 @@
 <body>
 
 Hello Thymeleaf!
+<h1 th:text="${'Hello ' + paramName.getMyName()}">
+
+</h1>
 
 
 </body>
