Java2.spring boot - add js file

--- a/java2/3_spring/thymeleaf_demo/src/main/resources/templates/myCustomHtml.html
+++ b/java2/3_spring/thymeleaf_demo/src/main/resources/templates/myCustomHtml.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link th:href="@{/myCss.css}" rel="stylesheet" />
+    <script type="text/javascript"  th:src="@{/myJs.js}" defer></script>
+
 </head>
 <body>
 
