--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -8,6 +8,7 @@
 
 <div th:each="topic: *{topics}">
     <h3 th:text="${topic.title}"></h3>
+    <section th:text="${topic.header}"></section>
 </div>
 
 </body>
