--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -11,5 +11,23 @@
     <section th:text="${topic.header}"></section>
 </div>
 
+<h1>New topic submission form</h1>
+<form th:action="@{/topics}" th:object="${newTopic}" method="post">
+    <p>
+        <label>Topic title:
+            <input type="text" th:field="*{title}" />
+        </label>
+    </p>
+    <p>Topic header:
+        <label>
+            <input type="text" th:field="*{header}" />
+        </label>
+    </p>
+    <p>
+        <input type="submit" value="Submit" />
+        <input type="reset" value="Reset" />
+    </p>
+</form>
+
 </body>
 </html>
