--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -8,6 +8,8 @@
 
 <h3 th:text="${topic.title}"></h3>
 <section th:text="${topic.header}"></section>
+<a th:href="@{/topics}">Got to List all topics page</a>
+
 
 </body>
 </html>
