--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Topics</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
+
 
 <div th:each="topic: *{topics}">
     <h3 th:text="${topic.title}"></h3>
@@ -12,22 +14,7 @@
 </div>
 
 <h1>New topic submission form</h1>
-<form th:action="@{/topics}" th:object="${newTopic}" method="post">
-    <p>
-        <label>Topic title:
-            <input type="text" th:field="*{title}" />
-        </label>
-    </p>
-    <p>Topic header:
-        <label>
-            <input type="text" th:field="*{header}" />
-        </label>
-    </p>
-    <p>
-        <input type="submit" value="Submit" />
-        <input type="reset" value="Reset" />
-    </p>
-</form>
+<a th:href="@{/topics/add}">Go to Create Topic Form page</a>
 
 </body>
 </html>
