--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/addTopic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/addTopic.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Add new Topics</title>
-    <link th:href="@{/css/style.css}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
+<header th:insert="fragments/fragments.html :: header"> </header>
 
 <h1>New topic submission form</h1>
 <form th:action="@{/topics}" th:object="${newTopic}" method="post">
@@ -24,6 +26,8 @@
         <input type="reset" value="Reset" />
     </p>
 </form>
+
+<footer th:insert="fragments/fragments.html :: footer"> </footer>
 
 </body>
 </html>
