--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Topic</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
+<header th:insert="fragments/fragments.html :: header"> </header>
 
 <h3 th:text="${topic.title}"></h3>
 <section th:text="${topic.header}"></section>
 <a th:href="@{/topics}">Got to List all topics page</a>
 
 
+<footer th:insert="fragments/fragments.html :: footer"> </footer>
 </body>
 </html>
