Java2.spring boot - add topic comments (OneToMany)

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -11,6 +11,11 @@
 
 <h3 th:text="${topic.title}"></h3>
 <section th:text="${topic.header}"></section>
+<div th:each="comment: ${topic.comments}">
+    <section th:text="${comment.text}"></section>
+</div>
+
+
 <a th:href="@{/topics}">Got to List all topics page</a>
 
 
