--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/listTopics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/listTopics.html
@@ -42,7 +42,7 @@
 </table>
 <div th:if="${topicPage.totalPages > 0}" class="pagination"
      th:each="pageNumber : ${pageNumbers}">
-    <a th:href="@{/topics/listTopics(size=${topicPage.size}, page=${pageNumber})}"
+    <a th:href="@{/topics/list(size=${topicPage.size}, page=${pageNumber})}"
        th:text=${pageNumber}
        th:class="${pageNumber==topicPage.number + 1} ? active"></a>
 </div>
