--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -5,6 +5,25 @@
     <title>Movie Topics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
+    <style>
+        .pagination {
+            display: inline-block;
+        }
+
+        .pagination a {
+            color: black;
+            float: left;
+            padding: 5px 5px;
+            text-decoration: none;
+        }
+
+        .pagination a.active {
+            background-color: gray;
+            color: white;
+            border-radius: 2px;
+        }
+    </style>
 </head>
 <body style="min-height: 100vh">
 
@@ -12,10 +31,36 @@
 
 <main>
 
-    <div th:each="topic: *{topics}">
-        <h3 th:text="${topic.title}"></h3>
-        <section th:text="${topic.header}"></section>
-        <a th:href="@{/topics/{id}(id=${topic.id})}">Enter</a>
+    <div class="container mt-5 mb-1">
+
+        <table class="table table-dark table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col" th:text="#{Title}">Title</th>
+                    <th scope="col" th:text="#{Header}">Header</th>
+                    <th scope="col" th:text="#{Action}">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="topic, i: *{topics}">
+                    <th scope="row" th:text="${topics.getPageable().getPageNumber() * topics.getPageable().getPageSize() + i.index + 1}"></th>
+                    <td th:text="${topic.title}"></td>
+                    <td th:text="${topic.header}"></td>
+                    <td>
+                        <a class="btn btn-secondary" th:href="@{/topics/{id}(id=${topic.id})}" th:text="#{View}">view</a>
+                    </td>
+                </tr>
+            </tbody>
+
+        </table>
+
+
+        <div th:if="${topics.totalPages > 0}" class="pagination" th:each="pageNumber : ${pageNumbers}">
+            <a th:href="@{/topics(size=${topics.size}, page=${pageNumber})}"
+               th:text="${pageNumber + 1}"
+               th:class="${pageNumber==topics.number} ? active"></a>
+        </div>
     </div>
 
     <h1>New topic submission form</h1>
