Add error date time to error page

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error/404.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error/404.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-Such page does not exist
+Such page does not exist<br>
+<span th:text="'Time:' + ${#dates.format(#dates.createNow(), 'yyyy-MMM-dd  HH:mm:ss.SSS')}"></span>
 
 </body>
 </html>
