--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-Some error occurred
+Some error occurred<br>
+<span th:text="'Time:' + ${#dates.format(#dates.createNow(), 'yyyy-MMM-dd  HH:mm:ss.SSS')}"></span>
 
 </body>
 </html>
