--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/error.html
@@ -7,7 +7,8 @@
 <body>
 
 Some error occurred<br>
-<span th:text="'Time:' + ${#dates.format(#dates.createNow(), 'yyyy-MMM-dd  HH:mm:ss.SSS')}"></span>
+<span th:text="'Time: ' + ${#dates.format(#dates.createNow(), 'yyyy-MMM-dd  HH:mm:ss.SSS')}"></span><br>
+<span th:text="'Error ID: ' + ${errorId}"></span>
 
 </body>
 </html>
