--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
@@ -7,7 +7,7 @@
 
 <header th:fragment="header" class="p-3 bg-dark text-white">
 
-    <script type="text/javascript"  th:src="@{/scripts.js}" defer></script>
+    <script type="text/javascript"  th:src="@{/js/scripts.js}" defer></script>
 
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
