--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
@@ -30,8 +30,15 @@
                 <input type="submit" value="Search" />
             </form>
 
-            <button class="dropdown-item" type="button" onclick="setLanguage('fr')" th:text="#{lang.fr}"></button>
-            <button class="dropdown-item" type="button" onclick="setLanguage('en')" th:text="#{lang.en}"></button>
+            <div th:fragment="languageSelector" class="dropdown">
+                <button th:text="#{lang.options}" class="btn btn-dark dropdown-toggle me-2" type="button" id="langSelectBtn" data-bs-toggle="dropdown" aria-expanded="false" >
+                    EN
+                </button>
+                <ul class="dropdown-menu dropdown-menu-primary" aria-labelledby="langSelectBtn">
+                    <li><a class="dropdown-item" onclick="setLanguage('fr')" th:text="#{lang.fr}"></a></li>
+                    <li><a class="dropdown-item" onclick="setLanguage('en')" th:text="#{lang.en}"></a></li>
+                </ul>
+            </div>
 
             <div class="text-end">
                 <button type="button" class="btn btn-outline-light me-2" th:text="#{Login}">Login</button>
