Fix footer placement

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
@@ -48,7 +48,7 @@
     </div>
 </header>
 
-<footer th:fragment="footer" class="py-3 my-4">
+<footer th:fragment="footer" class="mt-auto py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
