--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -25,7 +25,7 @@
         }
     </style>
 </head>
-<body style="min-height: 100vh">
+<body class="d-flex flex-column min-vh-100">
 
 <header th:insert="fragments/fragments.html :: header"> </header>
 
@@ -76,6 +76,6 @@
 
 </main>
 
-<footer th:insert="fragments/fragments.html :: footer"> </footer>
+<footer th:replace="fragments/fragments.html :: footer"> </footer>
 </body>
 </html>
