--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/hello.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/hello.html
@@ -9,8 +9,8 @@
 <h1 th:inline="text">Hello <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>
 <h2>Welcome</h2>
 <p>Spring Security Thymeleaf tutorial</p>
-<div sec:authorize="hasRole('USER')">Text visible to user.</div>
-<div sec:authorize="hasRole('ADMIN')">Text visible to admin.</div>
+<div sec:authorize="hasAuthority('USER')">Text visible to user.</div>
+<div sec:authorize="hasAuthority('ADMIN')">Text visible to admin.</div>
 <div sec:authorize="isAuthenticated()">Text visible only to
     authenticated users.</div>
 Authenticated username:
