--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -6,24 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
-    <style>
-        .pagination {
-            display: inline-block;
-        }
-
-        .pagination a {
-            color: black;
-            float: left;
-            padding: 5px 5px;
-            text-decoration: none;
-        }
-
-        .pagination a.active {
-            background-color: gray;
-            color: white;
-            border-radius: 2px;
-        }
-    </style>
+    <link th:href="@{/css/style.css}"  rel="stylesheet">
 </head>
 <body class="d-flex flex-column min-vh-100">
 
@@ -48,15 +31,11 @@
                     <td th:text="${topic.title}"></td>
                     <td th:text="${topic.header}"></td>
                     <td>
-                        <form action="#" th:action="@{/topics/delete/{id}(id=${topic.id})}" th:object="${topic}"
-                              th:method="delete" class="form">
+                        <form th:action="@{/topics/delete/{id}(id=${topic.id})}" th:object="${topic}" th:method="delete" class="form">
                             <input type="hidden" name="_method" value="delete">
-                            <input type="submit" value="Delete Topic">
-
+                            <input type="submit" value="Delete Topic" class="btn btn-danger">
+                            <a class="btn btn-primary" th:href="@{/topics/{id}(id=${topic.id})}" th:text="#{View}">View</a>
                         </form>
-                    </td>
-                    <td>
-                        <a class="btn btn-secondary" th:href="@{/topics/{id}(id=${topic.id})}" th:text="#{View}">view</a>
                     </td>
                 </tr>
             </tbody>
