added hidden delete

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -49,7 +49,8 @@
                     <td th:text="${topic.header}"></td>
                     <td>
                         <form action="#" th:action="@{/topics/delete/{id}(id=${topic.id})}" th:object="${topic}"
-                              method="post" class="form">
+                              th:method="delete" class="form">
+                            <input type="hidden" name="_method" value="delete">
                             <input type="submit" value="Delete Topic">
 
                         </form>
