Fix links to login and registration

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/fragments/fragments.html
@@ -45,8 +45,8 @@
             </div>
 
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2" th:text="#{Login}">Login</button>
-                <button type="button" class="btn btn-warning" th:text="#{Signup}">Sign-up</button>
+                <a class="btn btn-outline-light me-2" th:text="#{Login}" th:href="@{/login}">Login</a>
+                <a type="button" class="btn btn-warning" th:text="#{Signup}" th:href="@{/registration}">Sign-up</a>
             </div>
         </div>
     </div>
