--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/addTopic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/addTopic.html
@@ -9,7 +9,7 @@
     <link th:href="@{/css/style.css}"  rel="stylesheet">
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <header th:insert="fragments/fragments.html :: header"> </header>
+    <header th:replace="fragments/fragments.html :: header"> </header>
 
     <main>
         <div class="container mt-5 mb-1">
