--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -11,7 +11,7 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
 
-<header th:insert="fragments/fragments.html :: header"> </header>
+<header th:replace="fragments/fragments.html :: header"> </header>
 
 <main>
 
