--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      data-bs-theme="dark" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Movie Topic</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
+    <link th:href="@{/css/style.css}"  rel="stylesheet">
 </head>
-<body>
-<header th:insert="fragments/fragments.html :: header"> </header>
+<body class="d-flex flex-column min-vh-100">
 
-<h3 th:text="${topic.title}"></h3>
-<section th:text="${topic.header}"></section>
-<div th:each="comment : ${topic.comments}">
-    <section th:text="${comment.text}"></section>
-</div>
+<header th:replace="fragments/fragments.html :: header"> </header>
 
-<h3>New comment submission form</h3>
-<form th:action="@{/topics/__${id}__}" th:object="${comment}" method="post">
-    <p>
-        <label>Add comment:
+<main>
+    <div class="container mt-5 mb-1">
+    <h3 th:text="${topic.title}"></h3>
+    <section th:text="${topic.header}"></section>
+    <div th:each="comment : ${topic.comments}">
+        <section th:text="${comment.text}"></section>
+    </div>
+    <div sec:authorize="hasAnyAuthority('USER', 'ADMIN')" class="container">
+        <h3>Add new comment</h3>
+        <form th:action="@{/topics/__${id}__}" th:object="${comment}" method="post">
+
+            <div class="form-group">
+                <label for="commentText">Your new comment</label>
+                <textarea th:field="*{text}" class="form-control" id="commentText" rows="3"></textarea>
+            </div>
             <input type="hidden" th:field="*{id}" id="id">
-            <input type="text" th:field="*{text}" />
-        </label>
-    </p>
-    <p>
-        <input type="submit" value="Submit" />
-        <input type="reset" value="Reset" />
-    </p>
-</form>
+            <p>
+                <input type="reset" value="Clear" class="btn btn-info"/>
+                <input type="submit" value="Submit" class="btn btn-success"/>
+            </p>
+        </form>
+    </div>
 
+    <a th:href="@{/topics}">Go to topics list</a>
+    </div>
 
+</main>
 
-<a th:href="@{/topics}">Got to List all topics page</a>
-
-
-<footer th:insert="fragments/fragments.html :: footer"> </footer>
+<footer th:replace="fragments/fragments.html :: footer"> </footer>
 </body>
 </html>
