Handle null check in Thymeleaf template

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -18,6 +18,7 @@
     <h3 th:text="${topic.title}"></h3>
     <section th:text="${topic.header}"></section>
     <div th:each="comment : ${topic.comments}">
+        <section th:text="${comment?.createdBy?.username}"></section>
         <section th:text="${comment.text}"></section>
     </div>
     <div sec:authorize="hasAnyAuthority('USER', 'ADMIN')" class="container">
