Add comment updated at

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topic.html
@@ -17,13 +17,14 @@
     <div class="container mt-5 mb-1">
     <h3>Written by <span th:text="${topic.title}"></span></h3>
     <section th:text="${topic.header}"></section>
-    <div th:each="comment : ${topic.comments}">
-        <div class="card">
-            <div class="card-header" th:text="${comment?.createdBy?.username}"></div>
-            <div class="card-body">
-                <p class="card-text" th:text="${comment.text}"></p>
-                <a href="#" class="btn btn-primary">Do some action</a>
-            </div>
+    <div th:each="comment : ${topic.comments}" class="card mt-1">
+        <div class="card-header d-flex justify-content-between">
+            <span th:text="${comment?.createdBy?.username}"></span>
+            <span th:text="${#temporals.format(comment?.updatedAt, 'yyyy-MM-dd HH:mm:ss')}"></span>
+        </div>
+        <div class="card-body">
+            <p class="card-text" th:text="${comment.text}"></p>
+            <a href="#" class="btn btn-primary">Do some action</a>
         </div>
     </div>
     <div sec:authorize="hasAnyAuthority('USER', 'ADMIN')" class="container">
