Test only logged-in user can add post

--- a/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
+++ b/java2/3_spring/thymeleaf_blog/src/main/resources/templates/topics.html
@@ -31,7 +31,7 @@
                     </th>
                     <th scope="col">
                         <a th:text="#{Action}">Action</a>
-                        <a class="btn btn-success float-end" th:href="@{/topics/add}" th:text="#{Create}">Create</a>
+                        <a sec:authorize="isAuthenticated()" class="btn btn-success float-end" th:href="@{/topics/add}" th:text="#{Create}">Create</a>
                     </th>
                 </tr>
             </thead>
